--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,11 @@ body {
   right: 0;
   z-index: 100000;
 }
+.logo img {
+  width: 20px;
+  height: 20px;
+  margin-bottom: 2px;
+}
 
 /* nav animation */
 .nav-link:after {
@@ -67,70 +72,42 @@ body {
   position: absolute;
   background: #000000;
   width: 0;
-  scale:50%;
+  scale: 50%;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
 }
 
 .nav-link:hover:after {
-  width: 100%; 
+  width: 100%;
   left: 0;
 }
 
-
-
-
-/* ******SiteID nhận diện logo */
-.siteID {
-  position: relative;
-  display: inline-block;
-  color: #fff;
-  font-size: 20px;
-  line-height: 46px;
-  padding: 0 24px;
-  font-weight: bolder;
-}
-
-/* ********Đồng hồ cập nhật trực tiếp******** */
-
-#digital-clock {
-  transition: 0.5s;
-  position: relative;
-  display: inline-block;
-  font-size: 20px;
-  line-height: 24px;
-  color: #000000E6;
-  background-color: #dbf0ff;
-}
-
-
-/* làm category-menu  */
 /* scale */
-div>nav>div>img {
+div > nav > div > img {
   width: 51px;
   height: 70px;
   margin-right: 20px;
 }
 
-div>ul>li {
+div > ul > li {
   transition: 0.5s;
 }
 
-div>ul>li:hover {
+div > ul > li:hover {
   scale: 110%;
   /* background:#fff;
-          color:#dbf0ff; */
+  color:#dbf0ff; */
 }
 
-ul>li {
+ul > li {
   padding-left: 20px;
   padding-right: 20px;
 }
 
-nav>div>a {
+nav > div > a {
   transition: 0.5s;
 }
 
-nav>div>a:hover {
+nav > div > a:hover {
   scale: 110%;
 }
 /* *************HẾT HEADER**************** */
@@ -146,25 +123,145 @@ nav>div>a:hover {
   position: relative;
 }
 
-.toast-message {
-  position: fixed;
-  bottom: 70px;
-  right: 40px;
-  padding: 10px 20px;
-  border-radius: 20px;
-  background-color: #fba0e2;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  transition: 0.4s ease-in;
-  opacity: 0;
-  z-index: 90000;
-}
 /* ****slider******** */
 
+@import url("https://fonts.googleapis.com/css?family=Montserrat:700");
+.greeting {
+  background-color: #0040c1;
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
+  z-index: 0;
+}
+.greeting__title {
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 6vw ;
+  text-transform:uppercase;
+}
 
 
+/* ********Đồng hồ cập nhật trực tiếp******** */
+#digital-clock {
+  transition: 0.5s;
+  position: relative;
+  display: inline-block;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 5vh;
+}
 
+.cta {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  background: none;
+  border: none;
+  padding: 12px 18px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 15vh;
+}
+.cta::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) translateX(calc(100% + 20px)) ;
+  width: 45px;
+  height: 45px;
+  background: #dc143c;
+  border-radius: 50px;
+  transition: tranform .25s .25s cubic-bezier(0,0,.5,2), width 0.25s cubic-bezier(0,0,.5,2);
+  z-index: -1;
+}
+.cta:hover::before {
+  width: 100%;
+  transform: translateY(-50%) translateX(-18px);
+  transition: transform .25s cubic-bezier(0,0,.5,2), width 0.25s 0.25s cubic-bezier(0,0,.5,2);
+}
+.cta i {
+  margin-left: 5px ;
+  transition: tranform 0.25s 0.4s cubic-bezier(0,0,.5,2);
+}
+.cta:hover i {
+  transform: translateX(3px);
+}
+
+.cube {
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px #003298;
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  animation: cube 16s ease-in forwards infinite;
+}
+.cube:nth-child(2n) {
+  border-color: #0051f4;
+}
+.cube:nth-child(2) {
+  animation-delay: 2s;
+  left: 25vw;
+  top: 40vh;
+}
+.cube:nth-child(3) {
+  animation-delay: 4s;
+  left: 75vw;
+  top: 30vh;
+}
+.cube:nth-child(4) {
+  animation-delay: 6s;
+  left: 30vw;
+  top: 10vh;
+}
+.cube:nth-child(5) {
+  animation-delay: 8s;
+  left: 10vw;
+  top: 65vh;
+}
+.cube:nth-child(6) {
+  animation-delay: 10s;
+  left: 40vw;
+  top: 10vh;
+}
+.cube:nth-child(7) {
+  animation-delay: 12s;
+  left: 75vw;
+  top: 50vh;
+}
+.cube:nth-child(8) {
+  animation-delay: 14s;
+  left: 100vw;
+  top: 70vh;
+}
+.cube:nth-child(9) {
+  animation-delay: 16s;
+  left: 90vw;
+  top: 10vh;
+}
+@keyframes cube {
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
 
 /* galery-view */
 
@@ -182,7 +279,6 @@ nav>div>a:hover {
 }
 .galery-wrapper .text-description {
   font-size: 16px;
-
 }
 
 .galery-wrapper {
@@ -223,8 +319,6 @@ nav>div>a:hover {
   padding: 10px 35px;
 }
 
-
-
 /* chan trang */
 .footer img {
   width: 100%;
@@ -242,6 +336,14 @@ nav>div>a:hover {
   color: rgba(0, 0, 0, 0.3);
 }
 
+/* cotact content */
+.contact {
+  padding: 30px;
+}
+.btn-submit {
+  margin-top: 20px;
+}
+
 
 /* cuon chuot */
 .scroller {
@@ -251,10 +353,6 @@ nav>div>a:hover {
   padding: 5px;
 }
 
-
-
-
-
 .scroller marquee {
   text-align: center;
   color: #7375c1;
@@ -262,5 +360,3 @@ nav>div>a:hover {
   font-size: 16px;
   font-weight: bold;
 }
-
-
